docs: 쿠폰 발급 API가 ID 값들을 body에 함께 받도록 명세 변경
